--- a/packages/app/client/src/ui/styles/themes/light.css
+++ b/packages/app/client/src/ui/styles/themes/light.css
@@ -163,6 +163,7 @@ html {
   --explorer-panel-group-border: 1px solid transparent;
   --explorer-panel-empty-message-color: var(--neutral-15);
   --service-panescrollbar-color: var(--neutral-13);
+  --explorer-link-color: var(--dialog-link-color);
 
   /* Explorer Bar */
   --explorer-bar-header-bg: var(--neutral-3);
@@ -249,6 +250,7 @@ html {
 
   /* Inspector accessory buttons */
   --accessory-button-color: var(--s-button-color);
+  --accessory-button-icon-color: var(--link-color);
 
   /* Auto Complete */
   --auto-complete-results-opacity: 0.9;
